ajout des réseaux

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,19 @@
     <title>Portfolio Franck</title>
 </head>
 <body>
+    <div class="container">
+        <div class="carte">
+            <img src="...">
+            <h2>Franck Kanza</h2>
+            <p>Développeur Web Junior<br>&<br>Consultant Web Applications</p>
+            <div class="reseau">
+                <a href="https://fr.linkedin.com/"><img src="./images/link.png"></a>
+                <a href="https://github.com/F-KZ/"><img src="./images/git.png"></a>
+            </div>
+            <a href="mailto: franck.kanza@outlook.fr" class="bouton">Contactez-moi</a>
+        </div>
+    </div>
+    
     
 </body>
 </html>
