--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Portfolio Franck</title>
 </head>
 <body>
     <div class="container">
         <div class="carte">
-            <img src="...">
+            <img src="./images/john.png">
             <h2>Franck Kanza</h2>
             <p>Développeur Web Junior<br>&<br>Consultant Web Applications</p>
             <div class="reseau">
