--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/pages/contact.css">
     <link rel="stylesheet" href="./css/style-general.css">
-    <title>Document</title>
+    <title>Contact</title>
 </head>
 <body>
     <div class="container">
@@ -20,6 +20,8 @@
                   <input type="text" class="email formEntry" placeholder="Telephone"/>
                   <textarea class="message formEntry" placeholder="Message"></textarea>
                   <input type="checkbox" class="termsConditions" value="Term">
+                  <label style="color: grey" for="terms"> I Accept the <span style="color: #0e3721">Terms of Use</span> & <span style="color: #0e3721">Privacy Policy</span>.</label><br>
+                  <button class="submit formEntry">Envoyer</button>
                 </form>
               </div>
               
