creation du nav

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 <body>
     <div class="container">
         <div class="carte">
+            <nav>
+                <ul>
+                  <li>Home</li>
+                  <li>About</li>
+                  <li>Services</li>
+                  <li>Contact</li>
+                </ul>
+              </nav>
             <img src="./images/john.png">
             <h2>Franck Kanza</h2>
             <p>Développeur Web Junior<br>&<br>Consultant Web Applications</p>
