--- a/competence.html
+++ b/competence.html
@@ -11,6 +11,14 @@
 <body>
     <div class="container">
         <div class="carte">
+            <nav>
+                <ul>
+                    <a href="./index.html"><li>Accueil</li></a> 
+                    <a href ="./projet.html"><li>Projets</li></a> 
+                 <a href="./contact.html"><li>Contact</li></a>
+                 <a href="./parcours.html"><li>Parcours</li></a>
+                </ul>
+              </nav>
             <h2>Mes Compétences</h2>
             <div class="skill-box">
                 <span class="title">HTML</span>
