--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,14 @@
 <body>
     <div class="container">
         <div class="carte">
+            <nav>
+                <ul>
+                    <a href="./index.html"><li>Accueil</li></a>
+                 <a href ="./projet.html"><li>Projets</li></a> 
+                 <a href="./competence.html"><li>Compétences</li></a> 
+                 <a href="./parcours.html"><li>Parcours</li></a>
+                </ul>
+              </nav>
             <div class="wrapper">
                 <form class="formulaire">
                   <div class="pageTitle title">Que puis-je faire pour vous ? </div>
