--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <div class="carte">
             <nav>
                 <ul>
-                  <li>Home</li>
-                  <li>About</li>
-                  <li>Services</li>
-                  <li>Contact</li>
+                 <a href ="./projet.html"><li>Projets</li></a> 
+                 <a href="./competence.html"><li>Compétences</li></a> 
+                 <a href="./contact.html"><li>Contact</li></a>
+                 <a href="./parcours.html"><li>Parcours</li></a>
                 </ul>
               </nav>
             <img src="./images/john.png">
