--- a/projet.html
+++ b/projet.html
@@ -12,6 +12,14 @@
 <body>
     <div class="container">
         <div class="carte">
+            <nav>
+                <ul>
+                    <a href="./index.html"><li>Accueil</li></a> 
+                    <a href ="./competence.html"><li>Compétences</li></a> 
+                 <a href="./contact.html"><li>Contact</li></a>
+                 <a href="./parcours.html"><li>Parcours</li></a>
+                </ul>
+              </nav>
             <div id="Projets">
                 <h2 class="presentation">Présentation de mes Projets</h2>
                 <div class="placement_photo">
