--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                   <input type="text" class="email formEntry" placeholder="Telephone"/>
                   <textarea class="message formEntry" placeholder="Message"></textarea>
                   <input type="checkbox" class="termsConditions" value="Term">
-                  <label style="color: grey" for="terms"> I Accept the <span style="color: #0e3721">Terms of Use</span> & <span style="color: #0e3721">Privacy Policy</span>.</label><br>
+                  <label style="color: grey" for="terms"> I Accept the <span style="color: white">Terms of Use</span> & <span style="color: white">Privacy Policy</span>.</label><br>
                   <button class="submit formEntry">Envoyer</button>
                 </form>
               </div>
