--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                  <a href ="./projet.html"><li>Projets</li></a> 
                  <a href="./competence.html"><li>Compétences</li></a> 
                  <a href="./contact.html"><li>Contact</li></a>
-                 <a href="./parcours.html"><li>Parcours</li></a>
+                 <a href="./Surprise.html"><li>Surprise</li></a>
                 </ul>
               </nav>
             <img src="./images/john.png">
