--- a/projet.html
+++ b/projet.html
@@ -17,7 +17,7 @@
                     <a href="./index.html"><li>Accueil</li></a> 
                     <a href ="./competence.html"><li>Compétences</li></a> 
                  <a href="./contact.html"><li>Contact</li></a>
-                 <a href="./parcours.html"><li>Parcours</li></a>
+                 <a href="./Surprise.html"><li>Surprise</li></a>
                 </ul>
               </nav>
             <div id="Projets">
