--- a/Surprise.html
+++ b/Surprise.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style-general.css">
+    <link rel="stylesheet" href="./css/pages/CV.css">
+    <title>C.V</title>
 </head>
 <body>
     <div class="container">
         <div class="carte">
             <nav>
                 <ul>
-                 <a href ="./projet.html"><li>Projets</li></a> 
+                 <a href ="./index.html"><li>Accueil</li></a> 
                  <a href="./competence.html"><li>Compétences</li></a> 
                  <a href="./contact.html"><li>Contact</li></a>
-                 <a href="./parcours.html"><li>Parcours</li></a>
+                 <a href ="./projet.html"><li>Projets</li></a> 
                 </ul>
               </nav>
               <input type="checkbox" id="switch">
@@ -26,11 +28,10 @@
                     </span>
                   </label>
                   <div class="image-box">
-                    <img src="./images/Capture d’écran 2022-11-27 à 23.18.08.png" alt="">
+                    <img src=".//" alt="">
                   </div>
                   <div class="details">
-                    <div class="name">Franck Kanza</div>
-                    <div class="job">Full Stack Developpeur</div>
+                    <div class="name">Un mode interrupteur super cool :p</div>
                     <div class="buttons">
                       <p> voici mon CV</p>
                       <button>Read More</button>
