--- a/competence.html
+++ b/competence.html
@@ -16,7 +16,7 @@
                     <a href="./index.html"><li>Accueil</li></a> 
                     <a href ="./projet.html"><li>Projets</li></a> 
                  <a href="./contact.html"><li>Contact</li></a>
-                 <a href="./parcours.html"><li>Parcours</li></a>
+                 <a href="./Surprise.html"><li>Suprise</li></a>
                 </ul>
               </nav>
             <div class="skill-box">
