--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
                     <a href="./index.html"><li>Accueil</li></a>
                  <a href ="./projet.html"><li>Projets</li></a> 
                  <a href="./competence.html"><li>Compétences</li></a> 
-                 <a href="./parcours.html"><li>Parcours</li></a>
+                 <a href="./Surprise.html"><li>Surprise</li></a>
                 </ul>
               </nav>
             <div class="wrapper">
