--- a/Surprise.html
+++ b/Surprise.html
@@ -11,14 +11,6 @@
 <body>
     <div class="container">
         <div class="carte">
-            <nav>
-                <ul>
-                 <a href ="./index.html"><li>Accueil</li></a> 
-                 <a href="./competence.html"><li>Compétences</li></a> 
-                 <a href="./contact.html"><li>Contact</li></a>
-                 <a href ="./projet.html"><li>Projets</li></a> 
-                </ul>
-              </nav>
               <input type="checkbox" id="switch">
               <div class="outer">
                 <div class="content">
@@ -28,13 +20,13 @@
                     </span>
                   </label>
                   <div class="image-box">
-                    <img src=".//" alt="">
+                    <img src="./images/okay.jpeg" alt="">
                   </div>
                   <div class="details">
-                    <div class="name">Un mode interrupteur super cool :p</div>
+                    <div class="name">j'espére que t'as la ref...</div>
                     <div class="buttons">
-                      <p> voici mon CV</p>
-                      <button>Read More</button>
+                      <p> *Photo de Jon Snow</p>
+                      <a href="./index.html"><button>Retour accueil</button></a>
                     </div>
                   </div>
                 </div>
