--- a/projet.html
+++ b/projet.html
@@ -34,7 +34,7 @@
                                 <div class="description">
                                     <h3>Kanap</h3>
                                     <p>Construire le Back-end d'un site e-commerce</p>
-                                </div>>
+                                </div>
                             </div>
                         </div>
                     </a>
